# SerikBLDCore

./: CMakeLists.txt  Config.h  README.md  SerikBLDCore.pro  SerikBLDCoreMongo  SerikBLDCore_global.h  db.cpp  db.h  dilekce.cpp  dilekce.h  dilekceaciklama.cpp  dilekceaciklama.h  dilekcecevap.cpp  dilekcecevap.h  dilekcemanager.cpp  dilekcemanager.h  item.cpp  item.h  listitem.cpp  listitem.h  mongoheaders.h  personel.cpp  personel.h  personelmanager.cpp  personelmanager.h  serikbldcore.cpp  serikbldcore.h  tc.cpp  tc.h  tcmanager.cpp  tcmanager.h  user.cpp  user.h
Talep/: talep.cpp  talep.h  talepitem.cpp  talepkategori.cpp  talepkategori.h  talepkategorimanager.cpp  talepkategorimanager.h  talepmanager.cpp  talepmanager.h  talepsubitem.cpp  talepsubitem.h
bilgiEdinme/: bilgiedinmeitem.cpp  bilgiedinmeitem.h  bilgiedinmemanager.cpp  bilgiedinmemanager.h
calisma/: calismaitem.cpp  calismaitem.h  calismamanager.cpp  calismamanager.h
core/: core.cpp  core.h  element.cpp  element.h  object.cpp  object.h
docs/: annotated.html  annotated_dup.js  classes.html  dir_83e00a2169ac40434a26818942081e0e.html  dir_83e00a2169ac40434a26818942081e0e.js  dir_8e035d9dc690856fa4bdaf6316e5efd9.html  dir_8e035d9dc690856fa4bdaf6316e5efd9.js  dir_af9522bf52b639a9d2a6e718f378e42b.html  dir_af9522bf52b639a9d2a6e718f378e42b.js  dir_ca0c48d6bc5af1f8e64e6392d7d3f2db.html  dir_ca0c48d6bc5af1f8e64e6392d7d3f2db.js  dir_d711b130744b5f12788a9ca5dcf74aac.html  dir_d711b130744b5f12788a9ca5dcf74aac.js  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.dot  graph_legend.html  (+19 more)
(+219 files in other folders)
